creusot/tests/should_fail/assoc_type.stderr
warning: unused variable: `x`
 --> assoc_type.rs:9:16
  |
9 | fn uses<T: Tr>(x: Assoc<T>) {}
  |                ^ help: if this is intentional, prefix it with an underscore: `_x`
  |
  = note: `#[warn(unused_variables)]` on by default

warning: struct `Assoc` is never constructed
 --> assoc_type.rs:5:8
  |
5 | struct Assoc<T: Tr> {
  |        ^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: function `uses` is never used
 --> assoc_type.rs:9:4
  |
9 | fn uses<T: Tr>(x: Assoc<T>) {}
  |    ^^^^

warning: the `creusot_contracts` crate is not loaded. You will not be able to verify any code using Creusot until you do so.
  |
  = note: `#[warn(creusot::resolve_trait)]` on by default

error[creusot]: associated types are unsupported in type declarations
 --> assoc_type.rs:6:5
  |
6 |     item: T::A,
  |     ^^^^^^^^^^

error: aborting due to previous error; 4 warnings emitted

